load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "mtc",
    srcs = [
	"src/zval.cpp",
	"src/zmap.cpp",

	"src/json.cpp",

	"src/config.cpp",

	"src/byteBuffer.cpp",
	"src/fileStream.cpp"],

    hdrs = [
	"interfaces.h",
	"iBuffer.h",
	"iStream.h",

	"byteBuffer.h",
	"fileStream.h",

	"stringmap.h",
	"directory.h",
	"patricia.h",

	"serialize.h",
	"platform.h",

	"strptime.h",

	"config.h",

	"recursive_shared_mutex.hpp",

	"ptrpatch.h",

	"arena.hpp",

	"wcsstr.h",
	"bitset.h",
	"utf.hpp",
	"json.h",
	"file.h",
	"uuid.h",
	"zmap.h",
	"zmap-alias.h"],

    visibility = ["//visibility:public"],
)
